2013-01-07  Thomas Petazzoni

	* Fix build of Evas XCB backend.

2013-01-04  Jérémy Zurcher

	* Improve eina_share string del speed by a maybe 5-15%.

2013-01-03  Gustavo Sverzut Barbieri (k-s)

	* Add eina_alloc.h to Eina.h to define alloca()
	* Eeze: deprecated support for udev<148 and libmount<2.18

2013-01-03  Cedric Bail

	* Use Eina_File for evas png loader.

2013-01-03  Carsten Haitzler (The Rasterman)

        * Fixed ecore_con case where freeing server double-frees clients

2013-01-03  Jérémy Zurcher

	* Add eio_eet_sync symbols.

2013-01-02  Carsten Haitzler (The Rasterman)

        * Fixed evas_software_xlib_x_write_mask_line() issue - it was
        finding a segment in the shm cache of the wrong size for masks!

2013-01-02  Cedric Bail

	* Use Eina_File for evas webp, gif, tiff and eet loader.
	* Add eet_mmap to open an Eet file from an Eina_File.

2012-12-31  Gustavo Sverzut Barbieri (k-s)

	* Fixed eina_xattr_value_ls() an eina_xattr_value_fd_ls()
	* Added eina_xattr_fd_get(), eina_xattr_fd_set(),
	eina_xattr_del(), eina_xattr_fd_del(), eina_xattr_copy() and
	eina_xattr_fd_copy()
	* Added eina_file_copy()

2012-12-24  Mike Blumenkrantz

        * eina_magic_fail() now throws error messages on NULL pointers instead of critical
        * all efl object-freeing functions now take NULL without crashing or erroring
        * eio functions no longer crash when passed NULL and throw errors accordingly

2012-12-19  Gustavo Sverzut Barbieri (k-s)

	* Fixed Evas RGBA_Image->flags.loaded for copied images.
	* Fixed evas_object_image_is_inside() implementation.

2012-12-19  Carsten Haitzler (The Rasterman)

        * Fixed 24bpp issue with rendering in evas. It shows itself
        only under qemu/kvm with the cirruse driver that I have found.
        In this case the screen is really 24bpp packed and this case
        just never comes up on any vaguely modern gfx system.
        * Fixed 24bpp ximage convert back from 24bpp to 32bpp in